--- a/app1/site/content/contact.html
+++ b/app1/site/content/contact.html
@@ -22,24 +22,10 @@
 	<div class="hr-page-text">
 
 		<p>
-			This is a product from the OpenGeoGroep,
+			MapGlow is currently developed by Just van den Broecke.
 
-			<a href="mailto:info@opengeogroep.nl">info@opengeogroep.nl</a>
-			tel. + 31 (0)30 789 0365 (Utrecht, The Netherlands)
+			<a href="http://www.justobjects.nl">www.justobjects.nl</a>
 		</p>
-
-		<p>
-			Developers:
-		<ul>
-			<li>
-				Just van den Broecke <a href="mailto:just@justobjects.nl">just@justobjects.nl</a>
-
-			</li>
-			<li>
-				Milo van der Linden <a href="mailto:milo@dogodigi.net">milo@dogodigi.net</a>
-
-			</li>
-		</ul>
 
 
 	</div>
