--- a/app1/site/content/development.html
+++ b/app1/site/content/development.html
@@ -21,10 +21,10 @@
     <div class="hr-page-title">Development</div>
     <div class="hr-page-text">
 		<p>
-			Development has just started and will move to GitHub.
+			Development has just started with a move to  GitHub.
 		</p>
         <p>
-			<a href="https://github.com/OpenGeoGroep">OpenGeoGroep GitHub</a>
+			<a href="https://github.com/justb4/mapglow">github.com/justb4/mapglow</a>
          </p>
 
        <p>
