--- a/app1/site/content/north-banner.html
+++ b/app1/site/content/north-banner.html
@@ -18,5 +18,5 @@
   -->
 
 <div class="hr-html-panel-body">
-    <a href="http://mapglow.org"><img src="/site/media/mapglow-logo4.png" alt="Logo MapGlow" id="viewer_north_img"/></a><a href="http://www.opengeogroep.nl" target="_new"><img src="/site/media/ogg-logo-s52.png" alt="Logo OGG" id="viewer_north_img2"/></a>
+    <a href="http://mapglow.org"><img src="/site/media/mapglow-logo4.png" alt="Logo MapGlow" id="viewer_north_img"/></a>
 </div>
